--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <title>Viktorie</title>
         <link rel="stylesheet" href="styles.css">
-        <link rel="icon" href="favicon.ico">
+        <link rel="icon" href="/icons/favicon.ico">
 
         <link rel="apple-touch-icon" sizes="57x57" href="/icons/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="/icons/apple-icon-60x60.png">
