--- a/public/detekce.html
+++ b/public/detekce.html
@@ -1000,7 +1000,7 @@ Pustte se do dalšího žáka
 
 [[přečíst sloh Adama -&gt;Adam01]]
 [[přečíst sloh Chrise -&gt;Chris01]]
-[[už mám všechno opravené -&gt;pochyby]]</tw-passagedata><tw-passagedata pid="15" name="Bara03b" tags="" position="625,925" size="100,100">Hm, co je na Adamově slohu podivného?
+[[už mám všechno opravené -&gt;pochyby]]</tw-passagedata><tw-passagedata pid="15" name="Bara03b" tags="" position="625,925" size="100,100">Hm, co je na Bářině slohu podivného?
 
 Možná, že vás hlodá, že:
 * úroveň neodpovídá běžné práci, kterou Bára odevzdává,
